--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:src="@drawable/cookie_standing" />
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/brave_stand" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -90,31 +91,7 @@
                 android:textColor="#FFFFFF" />
         </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/login_google"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginVertical="5dp"
-                android:text="Google 로그인"
-                android:layout_marginHorizontal="30dp"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:lineSpacingExtra="1dp"
-                android:background="@drawable/google_background"
-                android:fontFamily="@font/cookierun_regular"
-                android:textColor="#000000" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_gravity="left|center_vertical"
-                android:src="@drawable/google_login" />
-        </FrameLayout>
 
         <TextView
             android:id="@+id/login_signup"
