--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mypage_background">
+    android:background="@drawable/user_page">
 
 
     <ImageView
@@ -157,10 +157,34 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/logout_button"
         android:layout_width="320dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="514dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="555dp"
+        android:background="@android:color/transparent"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/target_distance_change_button"
+        android:layout_width="320dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="517dp"
+        android:background="@android:color/transparent"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/password_change"
+        android:layout_width="320dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="479dp"
         android:background="@android:color/transparent"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
