--- a/app/src/main/res/layout/running_end_layout.xml
+++ b/app/src/main/res/layout/running_end_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/angel_cookie_cookietab"
+    android:background="@drawable/logout_background"
     android:padding="16dp">
 
     <TextView
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="달리기 결과"
+        android:textColor="@color/black"
         android:fontFamily="@font/cookierun_regular"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:textSize="25sp"/>
 
 
@@ -38,7 +39,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="시간"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/distance"
@@ -48,7 +49,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="거리"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/average_pace"
@@ -58,7 +59,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="평균 페이스"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/coin"
@@ -68,7 +69,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="획득 코인"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
         </LinearLayout>
 
@@ -85,7 +86,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="00:00:00"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/distance_user"
@@ -95,7 +96,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="0.00km"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/average_pace_user"
@@ -105,7 +106,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="9' 22''"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/coin_user"
@@ -115,7 +116,7 @@
                 android:fontFamily="@font/cookierun_regular"
                 android:text="0"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
         </LinearLayout>
 
@@ -126,9 +127,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         android:src="@drawable/end_running_button"
-        android:text="완료"
-        android:fontFamily="@font/cookierun_regular"
-        android:textSize="18sp"/>
+        android:fontFamily="@font/cookierun_regular"/>
 </LinearLayout>
