--- a/app/src/main/res/layout/password_change_layout.xml
+++ b/app/src/main/res/layout/password_change_layout.xml
@@ -28,6 +28,7 @@
             android:background="@drawable/login_background"
             android:fontFamily="@font/cookierun_regular"
             android:hint="현재 비밀번호"
+            android:inputType="textPassword"
             android:lineSpacingExtra="1dp"
             android:paddingHorizontal="50dp"
             android:textColorHint="#E3B88D"
@@ -57,6 +58,7 @@
             android:id="@+id/pw_new"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:inputType="textPassword"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="6dp"
             android:background="@drawable/login_background"
@@ -90,6 +92,7 @@
         <EditText
             android:id="@+id/pw_new_confirm"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_height="50dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="6dp"
