--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -187,6 +187,7 @@
             android:text="어서 가... 난 이제 틀렸어..." />
 
         <ImageView
+            android:id="@+id/dead_cookie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
